src/App.css
#root {
  background: gray;
  height: 100vh;
  width: 100vw;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 900;
  color: white;
  /* font-family: 'Montserrat', sans-serif; */
}

a {
 text-decoration: none;
 color: white;
}

a:hover {
 cursor: pointer;
 text-decoration: underline;
 color: white;
}

.maincontainer {
  display: flex;
  flex-direction: column;
  height: 100vh
}

.main {
  /* height: 100%; */
  width: 100%;
  display: flex;
  flex-direction: row;
  flex: 1;
}

.console {
  min-height: 70px;
  height: 70px;
  width: 100%;
  background-color: rgba(40, 40, 40, 1);
  /* position: absolute;
  bottom: 0 */
}

.sidebar {
  min-width: 200px;
  background-color: rgba(15, 15, 15, 1);
  display: flex;
  flex-direction: column;
  color: rgba(180, 180, 180, 1);

}


.body {
  width: 100%;
  height: 100%;
  background-image: linear-gradient(rgba(60, 60, 60, 1), rgba(30, 30, 30, 1));
  display: flex;
  flex-direction: column;
  overflow-y: scroll;
  /* padding-bottom: 100px; */
}

.playlisthead {
  height: 55%;
}

.playlist {
  height: 45%;
  overflow-y: scroll;
}

table {
  border-collapse: separate;
  border-spacing: 0;
  padding: 0 5%;

}
.table-dark {
  background-color: rgba(25, 25, 25, 1);
}


.table th, .table td {
  color: white;
  font-weight: bold;
  font-size: 14px;
  padding: 10px;
  border-color:rgba(200,200,200,0.1);
}


.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
  background-color: rgba(40, 40, 40, 1);
}

.table-dark thead th {
  border-style: none;
  padding: 2px 10px;
  color: rgba(200, 200, 200, 1);
  font-weight: 100;
  font-size: 0.7em;
  letter-spacing: 2px;
  z-index: 100;
  position: sticky;
  top: 40px;
  background-color: rgba(25, 25, 25, 1)
}

.tableTextLeft {
  text-align: left;
}

.tableTextRight {
  text-align: right
}

.search {
  height: 100%;
  background-color: rgba(22, 22, 22, 1);
  display: flex;
  flex-direction: column;
}

#search {
  color: black;
  font-size: 0.8em;
  width: 175px;
  height: 22px;
  text-indent: 22px;
  border-radius: 40px;
  border-style: none;
}
#search:focus {
  outline: none
}


#search::-webkit-search-cancel-button{
    position: relative;
    right: 2px;
}

::placeholder {
  color: black;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 400;
}

#magnifyingGlass {
  position: relative;
  top: 0px;
  left: 20px;
  font-size: 15px;
  color: black;
}
#searchForm {
  position: absolute;
}

.searchbar {
  z-index: 1;
  min-height: 40px;
  padding: 10px;
  position: sticky;
  top: 0;
  background-color: black;
  /* box-shadow: 0px 0px 100px 50px rgba(0, 0, 0, 1); */
}



.searchResultsComponent {
  display: flex;
  flex-direction: column;
  background-color: rgba(30, 30, 30, 1);
  height: 100%;
  overflow-y: scroll;
}

.searchNoResultsComponent {
  display: flex;
  flex-direction: column;
  background-color: rgba(20, 20, 20, 1);
  height: 100%;
  padding-top: 33%;
}

.searchpage {
  height: 100%;
  width: 100%;
  margin: 0 auto;
}

.noResultsDescription {
  margin: 0 auto;
  text-align: center;
  max-width: 400px;
}

.noResultsDescription > h1 {
  font-size: 1.6em;
  font-weight: bolder;
  margin-top: 30px;
  margin-bottom: 30px;
}

.noResultsDescription > p {
  color: rgba(180, 180, 180, 1);
  font-size: 0.8em;
  font-weight: lighter;
}

.searchGlassSvg {
  margin: 0 auto;
}

.searchGlass {
  color: rgba(200, 200, 200, 1);
}

.topResult {
  background-image: linear-gradient(rgba(60, 60, 60, 1), rgba(30, 30, 30, 1));
  padding: 50px 0 0 0;
  padding-left: 30px;
  padding-bottom: 50px;
}

.topResultContainer {
  /* position:relative */
}

.topResultImg {
  height: 145px;
  width: 145px;
}

.topResultImg:hover {
  filter: brightness(50%);
}


.icon-play {
  z-index: -1;
  border: 2px white solid;
  border-radius: 50%;
  margin: 30%;
  margin-top: -135px;
  position: relative;
  background-color: rgba(20, 20, 20, .5)
}
.icon-play:hover {
  background-color: rgba(0, 0, 0, .8);
}


.topResult > div {
  width: 150px;
}
.topResult > div > h3 {
  text-align: center;
  font-size: 1.1em;
  font-weight: bolder;
  padding-bottom: 10px;
}
.resultTitle {
  padding-top: 10px;
  font-size: .9em;
  font-weight: bolder;
}
.resultSubline, .resultType {
  color: rgba(180, 180, 180, 1);
  font-size: .8em;
}

.resultSubline {
  font-weight: bolder
}
.resultType {
  font-size: .7em;
  font-weight: normal;
  letter-spacing: 2px
}

.categoryResults {
  display: flex;
  flex-direction: column;
  margin: 35px 35px 35px 35px;
}


.categoryResultsHeader {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.categoryResultsHeader > h3 {
  font-size: 1.1em;
  font-weight: bolder;
  padding-bottom: 10px;
  margin: 0
}

.seeAll {
  color: gray;
  font-size: .7em;
  font-weight: normal;
  letter-spacing: 2px
}
.seeAll:hover {
  cursor: pointer;
  text-decoration: underline;
  color: white;
}

.categoryImage {
  height: 65px;
  width: 65px;
}

hr {
  border-top: rgba(200, 200, 200, 0.1) 1px solid;
  border-width: 0.1em;
  width: 100%;
  margin: 0 0 30px 0;
}

.categoryResultsBody {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  max-height: 200px
}


.categoryResultContainer {
  display: flex;
  flex-direction: row;
  width: 50%;
  margin: 0 20px 24px 0
}

.categoryResultContainer:hover {
  background-color: rgba(40, 40, 40, 1);
  cursor: pointer;
  text-decoration: none;
}

.resultsDescription {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
}

.artistImage {
  border-radius: 50%;
}


.resultArtist {
  font-size: .9em;
  font-weight: bolder;
  position: relative;
  top: 24px;
}


.link:hover {
  cursor: pointer;
  text-decoration: underline;
  color: inherit
}



.showPage {
  display: flex;
  flex-direction: column;
}

.showTableHeader {
    background-image: linear-gradient(rgba(60, 60, 60, 1), rgba(25, 25, 25, 1));
}

.albumHeaderContainer {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 100%;
  padding: 5% 5% 0 5%;
}

.headerMainInfo {
  display: flex;
  flex-direction: row;
}

.albumHeaderContainer > div > img {
  height: 135px;
  width: 135px;
}

.albumHeaderInfo {
  display: flex;
  flex-direction: column;
  padding-left: 30px;
}

.albumHeaderInfo > p {
  font-size: 0.7em;
  font-weight: 100;
  letter-spacing: 2px;
}

.albumHeaderInfo > h1 {
  font-size: 2.2em;
  font-weight: 900;
}

.albumHeaderInfo > h4 {
  color: rgba(200, 200, 200, 1);
  font-size: 0.9em;
  margin-bottom: 5px;
  font-weight: bold
}

.albumHeaderInfo > h4 > span {
  color: white;
}


.headerOptions {
  display: flex;
  flex-direction: row;
  width: 100%;
  padding-top: 15px;
  padding-bottom: 15px;
}

.headerOptions > button {
  width: 110px;
  height: 30px;
  border-radius: 50px;
  font-size: 0.7em;
  font-weight: bolder;
  letter-spacing: 2px;
  background-color: rgba(0, 180, 70, 1);
  border-color: rgba(0, 180, 70, 1);
}

.headerOptions > button > div {
  position: relative;
  top: 1px;
}

.trackOptionsIcon {
  display: inline;
  padding: 0 10%;
  margin: 0;
  font-size: 1.5em;
  line-height: 10px;
  cursor: pointer;
}

.optionsCardContainer {
  position: relative;
}

.optionsCard {
  display: flex;
  flex-direction: column;
  position: absolute;
  float:left;
  right: 140px;
  border-radius: 5%;
  background-color: rgba(40, 40, 40, 1);
  box-shadow: 0px 5px 20px black;
  height: 260px;
  width: 220px;
}

.optionsCard > div {
  height: 14%;
}

.optionsCard > div:hover {
  background-color: rgba(100, 100, 100, 1);
}
.optionsCard > div > p {
  padding-top: 5%;
  padding-bottom: 5%;
  padding-left: 20%;
  text-align: left;
  font-size: 1em;
  font-weight: normal;
  color: rgba(200, 200, 200, 1)
}

.optionsCard > div > p:hover {
  color: white;
}

.createPlaylistCard {
  border-radius: 5%;
  background-color: rgba(40, 40, 40, 1);
  box-shadow: 0px 5px 20px black;
  margin-top: -145px;
  margin-left: -250px;
  margin-right: 220px;
  height: 160px;
  z-index: 10;
  display: flex;
  flex-direction: column-reverse;
}

.createPlaylistCard > div {
  height: 20%;
  padding-top: 5%;
  padding-bottom: 15%;
  padding-left: 20%;
  text-align: left;
  font-size: 1em;
  color: rgba(200, 200, 200, 1)
}

.createPlaylistCard > div:hover {
  background-color: rgba(100, 100, 100, 1);
  color: white;
}

.carrot {
  position: absolute;
  margin-left: -20px;
}

#playlistInput {
  box-sizing: border-box;
  height: 40px;
  margin-top: -20px;
  width: 100%;
  background-color: white;
}

#playlistInput:focus{
  outline: none
}

.sidebarHeader {
  box-sizing: border-box;
  margin: 50px 0 20px;
  height: 140px;
}

.sidebarOptions {
  color: rgba(180, 180, 180, 1);
  height: 20%;
  margin: 10px 0;
  padding: 0 20px;
}

.sidebarOptionsText {
  padding-left: 15px;
  font-size: 0.9em;

}

.sidebarOptions:hover {
  color: white;
  text-decoration: none
}

 .sidebarOptions > a {
  color: rgba(180, 180, 180, 1);
}

.sidebarOptions > a:hover {
  color: white;
  text-decoration: none;
}

.userLibraries {
  box-sizing: border-box;
  overflow-y: scroll;
  padding: 0 20px;
  flex-grow: 1;
}

.libraryHeaderText {
  padding-bottom: 0px;
  margin-bottom: 0;
}

.libraryLinks {
  font-size: .9em;
  margin: 10px 0;
  font-weight: 600;
}
.libraryLinks:hover {
  color: white;
}

.playlistsHeader {
  padding-top:25px;
}

.myPlaylists {
  font-weight: 300;
  font-size: 1em;
  margin: 5px 0;
  display: block;
  color: rgba(180, 180, 180, 1);
}


.myPlaylists:hover {
  color: white;
  cursor: pointer;
  text-decoration: none;
}

.sidebarFooter {
  position: sticky;
  align-self: flex-end;
  height: 100px;
  width: 100%;
  box-sizing: border-box;
  border-top: 1px solid;
  border-color:rgba(230,230,230,0.1);
  display: flex;
  flex-direction: column;
  font-weight: bold;
  font-size: 0.9em;
  padding: 0 20px;
}

.footerInstall {
  padding-top: 10px;
  padding-bottom: 10px;
}

.footerInstall:hover {
  color: white;
}

.install {
  margin-left: 10px;

}

.user {
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(230,230,230,0.2);
}

.user:hover {
  color: white;
}

.username {
  margin-left: 7px;
}

.playlistHeaderContainer {
  background-image: linear-gradient(rgba(60, 60, 60, 1), rgba(25, 25, 25, 1));
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 100%;
  padding: 5% 5% 0 5%;
}



.deletePlaylistIcon {
  margin-left: 20px;
  font-size: 1.5em;
  font-weight: 100;
  text-align: center;
  line-height: 100%;
  border: rgba(255, 255, 255, 0.7) 1px solid;
  border-radius: 50%;
  height: 30px;
  width: 30px;
  display: inline;
}

.deletePlaylistIcon:hover {
  border: white 2px solid;
  box-sizing: border-box;
  cursor: pointer;
  line-height: 95%
}

.playlistOptionsCard {
  box-sizing: border-box;
  position: absolute;
  margin-left: 0px;
  margin-top: -20px;
  height: 40px;
  width: 150px;
  border-radius: 10px;
  background-color: rgba(50, 50, 50, 1);
  box-shadow: 0px 5px 20px black;
}

.playlistOptionsCard > p {
  padding: 6% 2%;
  font-size: 0.9em;
  text-align: center;
  border-radius: 10px;
  font-weight: 100;
  color: rgba(200, 200, 200, 1)

}

.playlistOptionsCard > p:hover {
  background-color: rgba(100, 100, 100, 1)
}

#changeNameInput {
  background-color: white;
  height: 50px;
  font-size: 2.2em;
  font-weight: bolder;
  outline: none
}

#changeNameInput::placeholder {
  color: gray
}

#changeNameInput:hover {
  outline: none;
}

